--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,11 +43,11 @@
     <script>
         async function sendName() {
             const name = document.getElementById("username").value;
-            const response = await fetch("/api/hello", {
+            const response = await fetch("http://35.90.124.177:3000/hello?name=" + name), {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ name })
-            });
+            };
             const data = await response.json();
             document.getElementById("result").innerHTML = data.message;
         }
