--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,17 +41,14 @@
     <div class="response" id="result"></div>
 
     <script>
-        async function sendName() {
-            const name = document.getElementById("username").value;
-            const response = await fetch("http://35.90.124.177:3000/hello?name=" + name), {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ name })
-            };
-            const data = await response.json();
-            document.getElementById("result").innerHTML = data.message;
-        }
+    async function sendName() {
+        const name = document.getElementById("username").value;
+        const response = await fetch("http://35.90.124.177:3000/hello?name=" + name);
+        const data = await response.text();
+        document.getElementById("result").innerHTML = data;
+    }
     </script>
+
 
 </body>
 </html>
